syntax = "proto3";

import "google/protobuf/empty.proto";

package miscellaneus;

message MiscReply {
  string data = 1;
}

service Favorite2021 {
  rpc filter (Favorite2021FilterRequest) returns (MiscReply) {}
}

message Favorite2021FilterRequest {
  string option = 1;
  map<string, string> data = 2;
}

service Feedback {
  rpc insert (FeedbackInsertRequest) returns (MiscReply) {}
  rpc filter (FeedbackFilterRequest) returns (MiscReply) {}
  rpc list (FeedbackListRequest) returns (MiscReply) {}
  rpc update (FeedbackUpdateRequest) returns (google.protobuf.Empty) {}
}

message FeedbackInsertRequest {
  uint32 user_id = 1;
  string user_uuid = 2;
  string user_category = 3;
  string content = 4;
  string datime = 5;
  string category = 6;
}

message FeedbackFilterRequest {
  string option = 1;
  map<string, string> data = 2;
}

message FeedbackListRequest {
  uint32 user_id = 1;
  string user_category = 2;
}

message FeedbackUpdateRequest {
  string option = 1;
  map<string, string> data = 2;
}

service Chart {
  rpc entHome (ChartEntHomeRequest) returns (MiscReply) {}
}

message ChartEntHomeRequest { string data = 1; }

service Email {
  rpc insert (InsertRequest) returns (MiscReply) {}
  rpc code (CodeRequest) returns (MiscReply) {}
  rpc checkRecover (CheckRecoverRequest) returns (MiscReply) {}
}

message InsertRequest {
  string email = 1;
  string code = 2;
  string user_id = 3;
  string user_category = 4;
}

message CodeRequest {
  uint32 user_id = 1;
  string user_category = 2;
  string code = 3;
  string email = 4;
}

message CheckRecoverRequest {
  string user_category = 1;
  string code = 2;
  string email = 3;
}
