syntax = "proto3";

// import "google/protobuf/empty.proto";

package hypervisor;

service Staff {
  rpc signIn (StaffSignInRequest) returns (HypervisorReply) {}
}

message StaffSignInRequest {
  map<string, string> data = 1;
}

message HypervisorReply { string data = 1; }
